[tool.poetry]
name = "pushover-passthrough"
version = "0.1.0"
description = "Application to query data sources for events and send notifications through [Pushover](https://pushover.net)"
authors = ["David Buckley <david@davidbuckley.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
