[tool.poetry]
name = "pushover-passthrough"
version = "0.1.0"
description = "Application to query data sources for events and send notifications through Pushover"
authors = ["David Buckley <david@davidbuckley.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"
jsons = "^1.6.3"
typer = {extras = ["all"], version = "^0.7.0"}
httpx = "^0.23.3"
xdg-base-dirs = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.1.0"

[tool.poetry.scripts]
popt = 'pushover_passthrough:cli.app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
